--- a/index.html
+++ b/index.html
@@ -42,8 +42,28 @@ Struktur:
 -Instruktion zu login auf portal
 -
 
-
+Email autoveri machen
 
 Miro machen mit flussdiagram
+
+
+Auswählen wie viele Spieler 
+Jeder Spieler macht sich ein Avatar mit codenamen
+
+nach avatar auswahl kommt erste mision
+
+Sebi kommt und zweifelt an deren Fähigkeiten, sie müssen sich als Gruppe beweisen,
+
+nach text button weiter verifikation
+
+bei veri gehts um eine Mail zu schreiben mmit einem geheimcode
+
+alle 4 haben ihren code, wen richtig gehts weiter
+
+es kann nur einen coding specialist etc geben
+
+
+
+
 
 -->
