--- a/choseChar.html
+++ b/choseChar.html
@@ -17,13 +17,12 @@
                 <div class="title_div">
                     <a class="title_txt">Chose your character!</a>
                 </div>
-
-            <div class="avatar1" id="avatar1" onmousedown="chosenChar(id)"></div>    
-            <div class="avatar2" id="avatar2" onmousedown="chosenChar(id)"></div>
-            <div class="avatar3" id="avatar3" onmousedown="chosenChar(id)"></div>
-            <div class="avatar4" id="avatar4" onmousedown="chosenChar(id)"></div>
-            <div class="avatar5" id="avatar5" onmousedown="chosenChar(id)"></div>    
-                        
+            <div class="avatarDiv">
+                <div class="avatar1" id="avatar1" onmousedown="chosenChar(id)"></div>    
+                <div class="avatar2" id="avatar2" onmousedown="chosenChar(id)"></div>
+                <div class="avatar3" id="avatar3" onmousedown="chosenChar(id)"></div>
+                <div class="avatar4" id="avatar4" onmousedown="chosenChar(id)"></div>   
+            </div>           
         </div>
    
     
