--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
             <div class="main-text-div" id="main_text_div">
                 <div class="main-text">
                     <a>Das hier ist nur ein Text um mal zu testen wie das ganze den hier so aussieht, es ist also zimelicher Blüdsinn den ich hier schreib also sollte man dies lieber nicht ganz so genau beachten, falls du aber bis hier schon gelesen hast dann Brawo den es kommt nicht mehr und nicht weniger aber du bleibst trotzdem hier echt erstaunlich, genau so wie wann ich den eindlich mal ein Punkt setzen will ich denke jedcoch nicht sehr blad haha.</a>
-                    <a onmousedown="choseCharRedirect()" class="choseChar">  Lass uns erst mal einen Partner für dich auswählen!  </a>
+                    <a onmousedown="choseCharRedirect(NumPlayers.value)" class="choseChar">  Lass uns beginnen!  </a>
                 </div>
+                </div>
+                <div class="choseNumPlayers" id="choseNumPlayers">
+                    <a class="NumPlayersTxt">Wähle die Anzahl an Agenten aus:</a>
+                    <select id="NumPlayers" class="MenuNumPlayers">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
+
                 </div>
             <div class="avatar" id="avatar"></div>
             <div class="startingUp" id="startingUp">
