Scrollable Menu for agent choosing

--- a/choseChar.html
+++ b/choseChar.html
@@ -18,10 +18,43 @@
                     <a class="title_txt">Chose your character!</a>
                 </div>
             <div class="avatarDiv">
-                <div class="avatar1" id="avatar1" onmousedown="chosenChar(id)"></div>    
-                <div class="avatar2" id="avatar2" onmousedown="chosenChar(id)"></div>
-                <div class="avatar3" id="avatar3" onmousedown="chosenChar(id)"></div>
-                <div class="avatar4" id="avatar4" onmousedown="chosenChar(id)"></div>   
+                <div class="avatar1" id="avatar1" onmousedown="chosenChar(id)">
+                    <input type="text" class="inputAgentName" id="agent1" value="Agent I" maxlength="15">
+                    <div class="ChoseLook" id="AgentLook1">
+                        <div class="arrow-Right" title="AgentLook1" onmousedown="scrollPictureRight(title)"></div>
+                        <div class="arrow-Left" title="AgentLook1"  onmousedown="scrollPictureLeft(title)"></div>
+                    </div>
+                    <label class="label">Ready?</label>
+                    <input type="checkbox" class="checkbox" id="checkbox1">
+                </div>    
+                <div class="avatar2" id="avatar2" onmousedown="chosenChar(id)">
+                    <input type="text" class="inputAgentName" id="agent2" value="Agent I" maxlength="15">
+                    <div class="ChoseLook" id="AgentLook2">
+                        <div class="arrow-Right" title="AgentLook2" onmousedown="scrollPictureRight(title)"></div>
+                        <div class="arrow-Left" title="AgentLook2"  onmousedown="scrollPictureLeft(title)"></div>
+                    </div>
+                    <label class="label">Ready?</label>
+                    <input type="checkbox" class="checkbox" id="checkbox2">
+                </div>
+                <div class="avatar3" id="avatar3" onmousedown="chosenChar(id)">
+                    <input type="text" class="inputAgentName" id="agent3" value="Agent I" maxlength="15">
+                    <div class="ChoseLook" id="AgentLook3">
+                        <div class="arrow-Right" title="AgentLook3" onmousedown="scrollPictureRight(title)"></div>
+                        <div class="arrow-Left" title="AgentLook3"  onmousedown="scrollPictureLeft(title)"></div>
+                    </div>
+                    <label class="label">Ready?</label>
+                    <input type="checkbox" class="checkbox" id="checkbox3">
+                </div>
+                <div class="avatar4" id="avatar4" onmousedown="chosenChar(id)">
+                    <input type="text" class="inputAgentName" id="agent4" value="Agent I" maxlength="15">
+                    
+                    <div class="ChoseLook" id="AgentLook4">
+                        <div class="arrow-Right" title="AgentLook4" onmousedown="scrollPictureRight(title)"></div>
+                        <div class="arrow-Left" title="AgentLook4"  onmousedown="scrollPictureLeft(title)"></div>
+                    </div>
+                    <label class="label">Ready?</label>
+                    <input type="checkbox" class="checkbox" id="checkbox4">
+                </div>   
             </div>           
         </div>
    
