--- a/choseChar.html
+++ b/choseChar.html
@@ -25,27 +25,27 @@
                         <div class="arrow-Left" title="AgentLook1"  onmousedown="scrollPictureLeft(title)"></div>
                     </div>
                     <label class="label">Ready?</label>
-                    <input type="checkbox" class="checkbox" id="checkbox1">
+                    <input type="checkbox" class="checkbox" onmousedown="chosenChar(id)" id="checkbox1">
                 </div>    
-                <div class="avatar2" id="avatar2" onmousedown="chosenChar(id)">
+                <div class="avatar2" id="avatar2" >
                     <input type="text" class="inputAgentName" id="agent2" value="Agent I" maxlength="15">
                     <div class="ChoseLook" id="AgentLook2">
                         <div class="arrow-Right" title="AgentLook2" onmousedown="scrollPictureRight(title)"></div>
                         <div class="arrow-Left" title="AgentLook2"  onmousedown="scrollPictureLeft(title)"></div>
                     </div>
                     <label class="label">Ready?</label>
-                    <input type="checkbox" class="checkbox" id="checkbox2">
+                    <input type="checkbox" class="checkbox" onmousedown="chosenChar(id)" id="checkbox2">
                 </div>
-                <div class="avatar3" id="avatar3" onmousedown="chosenChar(id)">
+                <div class="avatar3" id="avatar3">
                     <input type="text" class="inputAgentName" id="agent3" value="Agent I" maxlength="15">
                     <div class="ChoseLook" id="AgentLook3">
                         <div class="arrow-Right" title="AgentLook3" onmousedown="scrollPictureRight(title)"></div>
                         <div class="arrow-Left" title="AgentLook3"  onmousedown="scrollPictureLeft(title)"></div>
                     </div>
                     <label class="label">Ready?</label>
-                    <input type="checkbox" class="checkbox" id="checkbox3">
+                    <input type="checkbox" class="checkbox" onmousedown="chosenChar(id)" id="checkbox3">
                 </div>
-                <div class="avatar4" id="avatar4" onmousedown="chosenChar(id)">
+                <div class="avatar4" id="avatar4">
                     <input type="text" class="inputAgentName" id="agent4" value="Agent I" maxlength="15">
                     
                     <div class="ChoseLook" id="AgentLook4">
@@ -53,7 +53,7 @@
                         <div class="arrow-Left" title="AgentLook4"  onmousedown="scrollPictureLeft(title)"></div>
                     </div>
                     <label class="label">Ready?</label>
-                    <input type="checkbox" class="checkbox" id="checkbox4">
+                    <input type="checkbox" class="checkbox" onmousedown="chosenChar(id)" id="checkbox4">
                 </div>   
             </div>           
         </div>
