--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 </div>
                 <div class="choseNumPlayers" id="choseNumPlayers">
-                    <a class="NumPlayersTxt">Wähle die Anzahl an Agenten aus:</a>
+                    <a class="NumPlayersTxt">Wähle die Anzahl an Agenten aus:<br></a>
                     <select id="NumPlayers" class="MenuNumPlayers">
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -54,11 +54,9 @@ Struktur:
 
 Email autoveri machen
 
-Miro machen mit flussdiagram
 
-
-Auswählen wie viele Spieler 
-Jeder Spieler macht sich ein Avatar mit codenamen
+Auswählen wie viele Spieler - done
+Jeder Spieler macht sich ein Avatar mit codenamen - done
 
 nach avatar auswahl kommt erste mision
 
