--- a/choseChar.html
+++ b/choseChar.html
@@ -8,6 +8,7 @@
     <div class="fadeOut" id="fadeOut"> </div>
         <div class="nav">
             <div class="logo"></div>
+            <div class="time-stamp"></div>
         </div>
             <div class="popUp" id="popUp_div">
                 <div class="popUp_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pellentesque diam nisi, vel scelerisque dolor faucibus cursus. Vestibulum posuere, enim nec lacinia feugiat, risus quam viverra urna, eu tincidunt lorem dui eget ligula. Aliquam vel urna a arcu pharetra tincidunt non vel erat. Quisque condimentum mauris sit amet nunc iaculis, non convallis orci sagittis. Aenean dictum eget augue eu molestie. Duis in turpis id tortor tempor blandit. Nullam blandit lacus velit, id consequat neque finibus in. Phasellus mollis nibh neque, ut pharetra purus vehicula eu. Cras vestibulum euismod turpis quis egestas. Vestibulum id lectus et augue pretium pretium a nec turpis. Nunc sit amet convallis urna. Quisque maximus odio neque, nec imperdiet turpis mattis id.</div>
