--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
     <div class="pictureEmojis2"></div>
     <div class="nav">
         <div class="logo"></div>
+        <div class="time-stamp"></div>
         </div>
         <div class="main">
+            <div class="main-div-dialog" id="main-div-dialog">
+                <div class="display-pic-dialog" id="dialog"></div>
+                        <div class="arrow-Right-dialog" title="dialog" onmousedown="scrollPictureRight(title)"></div>
+                        <div class="arrow-Left-dialog" title="dialog"  onmousedown="scrollPictureLeft(title)"></div>
+
+                    <!--<label class="label">Ready?</label>
+                    <input type="checkbox" class="checkbox" onmousedown="chosenChar(id)" id="checkbox1">
+                -->
+            </div>
+            <!--text for chosing agents-->
             <div class="main-text-div" id="main_text_div">
                 <div class="main-text">
                     <a>Das hier ist nur ein Text um mal zu testen wie das ganze den hier so aussieht, es ist also zimelicher Blüdsinn den ich hier schreib also sollte man dies lieber nicht ganz so genau beachten, falls du aber bis hier schon gelesen hast dann Brawo den es kommt nicht mehr und nicht weniger aber du bleibst trotzdem hier echt erstaunlich, genau so wie wann ich den eindlich mal ein Punkt setzen will ich denke jedcoch nicht sehr blad haha.</a>
@@ -34,6 +45,7 @@
                 <input type="number" class="input" id="inputSecCode">
             <a class="beginn" onclick="startLogin()" id="startButton">Schön das du da bist. <br> Lass uns beginnen!</a>        
         </div>
+        <!------------------------------------->
     </div>
 </div>
 
