--- a/firstMision.html
+++ b/firstMision.html
@@ -34,6 +34,7 @@
     
     <div class="nav">
         <div class="logo"></div>
+        <div class="time-stamp"></div>
     </div>
     <div class="sebi"> 
         Ich bin Sebastian
